WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198968
Network process crash in SandboxExtension::consume() via Download::publishProgress
https://bugs.webkit.org/show_bug.cgi?id=198968
Summary
Network process crash in SandboxExtension::consume() via Download::publishPro...
David Quesada
Reported
2019-06-18 09:31:19 PDT
rdar://problem/51732997
Attachments
Patch
(2.68 KB, patch)
2019-06-18 10:08 PDT
,
David Quesada
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Quesada
Comment 1
2019-06-18 10:08:20 PDT
Created
attachment 372345
[details]
Patch
WebKit Commit Bot
Comment 2
2019-06-18 10:51:11 PDT
Comment on
attachment 372345
[details]
Patch Clearing flags on attachment: 372345 Committed
r246551
: <
https://trac.webkit.org/changeset/246551
>
WebKit Commit Bot
Comment 3
2019-06-18 10:51:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug