Network process crash in SandboxExtension::consume() via Download::publishProgress https://bugs.webkit.org/show_bug.cgi?id=198968 rdar://problem/51732997

Reviewed by Alex Christensen.

Add an early return if the network process fails to resolve a sandbox extension handle for publishing
progress on a download. Creating the NSProgress doesn't do much since the progress reporting service
won't honor the attempt to publish progress on a URL the process does not have access to, and nothing
else in the Network process makes any use of the progress.

* NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::publishProgress):


Canonical link: https://commits.webkit.org/212943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246551 268f45cc-cd09-0410-ab3c-d52691b4dbfc